<resources>
    <string name="app_name">BakingApp</string>

    <!--RECIPE LIST ITEM-->
    <string name="item_recipe_image_description">Recipe Image</string>

    <!--STEP LIST ITEM-->
    <string name="item_recipe_step_image_description">Step Image</string>


    <!--TOOL TEXT-->
    <string name="item_recipe_name_text">Yellow Cake</string>
    <string name="item_recipe_ingredients_text">Ingredients:\n</string>
    <string name="item_recipe_servings_text">Servings: </string>
    <string name="recipe_fragment_recipe_name">Empanadas</string>
    <string name="item_recipe_ingredient_name">Water</string>
    <string name="item_recipe_ingredient_qty">10</string>
    <string name="item_recipe_ingredient_measure">Cups</string>
    <string name="widget_recipe_name">Brounies</string>

    <string name="item_recipe_step_description">Recipe Introduction</string>

    <!--STEP FRAGMENT-->
    <!--<string name="notification_text">Keep cooking your favorite recipe!</string>-->

    <!--WIDGET-->
    <string name="appwidget_text">Recipe</string>
    <string name="add_widget">BakingApp</string>
    <!--<string name="widget_shape_description">Shape description</string>-->
    <string name="widget_image_description">Image description</string>
    <string name="widget_recipe_servings_text">Servings: </string>


</resources>
