<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gv_ingredient_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:orientation="vertical"
    android:rowCount="1">

    <TextView
        android:id="@+id/tv_ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        tools:text="@string/item_recipe_ingredient_name" />

    <TextView
        android:id="@+id/tv_ingredient_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="0"
        android:layout_marginLeft="@dimen/item_constraint_start_margin"
        android:layout_marginStart="@dimen/item_constraint_start_margin"
        android:layout_marginRight="@dimen/item_constraint_end_margin"
        android:layout_marginEnd="@dimen/item_constraint_end_margin"
        tools:text="@string/item_recipe_ingredient_qty" />

    <TextView
        android:id="@+id/tv_ingredient_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        tools:text="@string/item_recipe_ingredient_measure" />
</GridLayout>