<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_recipe_img"
                android:contentDescription="@string/item_recipe_image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_constraint_bottom_margin"
                android:layout_marginEnd="@dimen/item_constraint_end_margin"
                android:layout_marginRight="@dimen/item_constraint_end_margin"
                android:layout_marginTop="@dimen/item_constraint_top_margin"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tool:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/item_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_constraint_end_margin"
                android:layout_marginLeft="@dimen/item_constraint_start_margin"
                android:layout_marginRight="@dimen/item_constraint_end_margin"
                android:layout_marginStart="@dimen/item_constraint_start_margin"
                android:layout_marginTop="@dimen/item_constraint_top_margin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/recipe_name_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tool:text="@string/item_recipe_name_text" />

            <TextView
                android:id="@+id/item_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_constraint_top_margin"
                android:layout_marginLeft="@dimen/item_constraint_start_margin"
                android:layout_marginStart="@dimen/item_constraint_start_margin"
                android:gravity="start"
                android:textColor="@color/colorText"
                app:layout_constraintTop_toBottomOf="@id/item_recipe_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tool:text="@string/item_recipe_servings_text" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>