<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/widget_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    tool:background="@color/appwidget_tools_background_color">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appwidget_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_constraint_start_margin"
                android:layout_marginStart="@dimen/item_constraint_start_margin"
                android:layout_marginTop="@dimen/item_constraint_top_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:text="@string/appwidget_text"
                android:textColor="@color/appwidget_text_color"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                tool:text="@string/widget_recipe_name" />

            <TextView
                android:id="@+id/appwidget_recipe_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_constraint_start_margin"
                android:layout_marginStart="@dimen/item_constraint_start_margin"
                android:layout_marginTop="@dimen/item_constraint_top_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/appwidget_text"
                android:textColor="@color/appwidget_text_color"
                android:textSize="14sp"
                android:textStyle="italic"
                tool:text="@string/widget_recipe_name" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_column="1"
            android:layout_gravity="end|center_vertical"
            android:layout_marginBottom="@dimen/item_constraint_bottom_margin"
            android:layout_marginEnd="@dimen/item_constraint_end_margin"
            android:layout_marginLeft="@dimen/item_constraint_start_margin"
            android:layout_marginRight="@dimen/item_constraint_end_margin"
            android:layout_marginStart="@dimen/item_constraint_start_margin"
            android:layout_marginTop="@dimen/item_constraint_top_margin"
            android:layout_row="0">

            <ImageView
                android:id="@+id/widget_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/widget_image_description"
                android:padding="6dp"
                android:src="@drawable/ic_recipe" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/widget_image_description"
                android:scaleType="fitCenter"
                android:src="@drawable/round_shape" />

        </FrameLayout>
    </GridLayout>

    <ListView
        android:id="@+id/widget_recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>